--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -17,12 +19,26 @@
 <body>
 
  <!-- navigation code here -->
+<header class="main-header">
+  <div class="main-header-wrap">
+  <h1>SpaceWalkers</h1>
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">About Us</a>
+    <a href="#">Blog</a>
+    <a href="#">Contact</a>
+    <a href="#">Sign In</a>
+  </nav>
+</div>
+</header>
 
   <div class="container home">
 
     <header class="intro">
        <!-- image code here -->
-
+      <div class="intro-image-wrap">
+        <img src="img/main-header.png" alt="space">
+      </div>
       <h2>Lift Off</h2>
     
       <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate, that if you touched it with a finger it would fall apart. Seeing this has to change a man.</p>
