--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>SpaceWalkers</title>
+  <title>SpaceWalkers - About Us</title>
 
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
@@ -21,10 +21,10 @@
  <!-- navigation code here -->
 <header class="main-header">
   <div class="main-header-wrap">
-    <h1><a href="index.html">SpaceWalkers</a></h1>
-     <nav>
-    <a href="#">Home</a>
-    <a href="aboutus.html">About Us</a>
+  <h1><a href="index.html">SpaceWalkers</a></h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="#">About Us</a>
     <a href="#">Blog</a>
     <a href="#">Contact</a>
     <a href="#">Sign In</a>
@@ -32,7 +32,7 @@
 </div>
 </header>
 
-  <div class="container home">
+  <div class="container aboutus">
 
     <header class="intro">
        <!-- image code here -->
