--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
  <!-- navigation code here -->
 <header class="main-header">
   <div class="main-header-wrap">
-    <h1><a href="index.html">SpaceWalkers</a></h1>
+    <h1><a href="index.html">
+      <span>S</span><span>p</span><span>a</span><span>c</span><span>e</span><span>W</span><span>a</span><span>l</span><span>k</span><span>e</span><span>r</span><span>s</span>
+    </a></h1>
      <nav>
     <a href="#">Home</a>
     <a href="aboutus.html">About Us</a>
